--- a/src/Components/Home/countdown/countdown.scss
+++ b/src/Components/Home/countdown/countdown.scss
@@ -1,6 +1,14 @@
+@import "~video-react/styles/scss/video-react"; // or import scss
+
 /*====================
         COUNTDOWN
 ======================*/
+.videoWrapper {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 
 .countdown_wrapper {
     
