sports_project : NavScroll effect added

--- a/src/Components/Header_Footer/header.scss
+++ b/src/Components/Header_Footer/header.scss
@@ -17,3 +17,6 @@
     font-size: 80%;
 }
 
+
+.ToolbarLogoStylingOn  { display: flex; justify-content: center;  align-items : center; }
+.ToolbarLogoStylingOff { display: none !important; }
