--- a/src/Resources/css/app.scss
+++ b/src/Resources/css/app.scss
@@ -167,11 +167,11 @@ footer .footer_discl {
 .featured_wrapper {
     background: url('../images/players/heat/heatBackground2.jpg');
     background-size: cover;
-    background-position: bottom;
+    background-position: right;
     margin: 0 auto;
     width: 100%;
-    margin-top: 220px;
-    height: 800px;
+    
+    height: 100vh;
     overflow: hidden;
  
 
