--- a/src/Components/Home/countdown/countdown.scss
+++ b/src/Components/Home/countdown/countdown.scss
@@ -1,4 +1,3 @@
-@import "~video-react/styles/scss/video-react"; // or import scss
 
 /*====================
         COUNTDOWN
@@ -11,30 +10,43 @@
 
 
 .countdown_wrapper {
-    
+    position: relative;
     bottom: 0px;
-    color:#dddddd;
+    color:#ffffff;
     font-family: 'Righteous', cursive;
     height: 100%;
 }
 
+.videoFadingContainer {
+    position: absolute;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.37);
+    
+}
+
 .countdown_wrapper .countdown_top {
+    position: absolute;
+    top: 10px;
     margin : 0;
     font-size: 3vw;
     padding: 40px;
     text-transform: uppercase;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-weight: 400;
 
+    h3 { padding-left: 2rem; margin: 0; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;  }
     h2 {
         margin : 0;
-        padding : 0;
+        padding-left : 2rem;
     }
 
 }
 
 .countdown_wrapper .countdown_top .countdown_toptext {
    
-    font-size: 4vw;
+    font-size: 3vw;
     text-transform: uppercase;
     font-family: 'Righteous', cursive;
 
@@ -42,35 +54,47 @@
 
 .countdown_wrapper .countdown_top .countdown_toptext .countdown_innertext {
     display : flex;
-    font-size: 4vw;
+    font-size: 3vw;
     margin : 0;
     text-transform: uppercase;
     font-family: 'Righteous', cursive;
 
     h2 {
         margin : 0;
-        padding : 0;
-        color:#dddddd;
+        padding-left : 2rem;
+        color: rgb(255, 255, 255);
+
     }
 
 }
-
+.CountdownCard_wrapper {
+    position: absolute;
+    top: 48.5%;
+    left: 0%;
+    width: 100%;
+}
 
 
 .countdown_wrapper .countdown_bottom {
+    position: absolute;
+    top: 30%;
+    left: 30%;
     display: flex;
     justify-content: center;
     padding: 10px 15px;
+    text-align : center;
+    font-weight : 400;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    text-align : center
 
 }
 
 .countdown_wrapper .countdown_time {
-    color:#dddddd;
-    font-size: 12vw;
+    color:#ffffff;
+    font-size: 10vw;
     margin-right: 14px;
     padding-right: 50px;
+    
+    
 }
 .countdown_wrapper .countdown_item:last-child .countdown_time{
     border:none;
@@ -78,8 +102,10 @@
 
 .countdown_wrapper .countdown_tag {
     text-transform: uppercase;
-    font-size: 20px;
-    padding-right: 2rem;
+    font-size: 30px;
+    padding-right: 5rem;
+    
+    
 }
 
 
@@ -87,7 +113,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #dddddd;
+    background-color: #fffdfd;
     height: 180px;
     margin-bottom: 5rem;
 }
