--- a/src/Resources/css/app.scss
+++ b/src/Resources/css/app.scss
@@ -22,7 +22,12 @@ a {
 
 .footer_bck {
   background-color: black;
-   
+   display: flex;
+   justify-content: space-evenly;
+}
+
+.footer_socialmedia_wrapper {
+    
 }
 
 .img_cover {
@@ -122,7 +127,7 @@ button {
     top: 0;
     position: absolute;
     right: 0;
-    background: #98c6e9;
+    background: rgb(138, 0, 0);
     color: #ffffff;
     border: 1px solid white;
     padding: 10px;
@@ -295,7 +300,7 @@ footer .footer_discl {
 
 .match_block .match_wrapper .match_top .right,
 .match_block .match_wrapper .match_bottom .right { 
-    background: #0e1731;
+    background: rgb(138, 0, 0);
     width: 70px;
     color: #ffffff;
     font-size: 50px;
@@ -305,7 +310,7 @@ footer .footer_discl {
 
 .match_box_big {
     width:100%;
-    border-bottom: 2px solid #98c6e9;
+    border-bottom: 2px solid #dddddd;
     padding: 20px;
     box-sizing: border-box;
     height: 143px;
@@ -323,9 +328,10 @@ footer .footer_discl {
 }
 
 .match_box_big .icon{
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 56px;
     background-size: cover !important;
+    background-position: center;
 }
 
 .match_box_big .block .team,
@@ -341,9 +347,9 @@ footer .footer_discl {
 }
 
 .block_wraper.nfo {
-    border-left: 1px solid #98c6e9;
+    border-left: 1px solid #dddddd;
     height: 102px;
-    padding-left: 10px;
+    padding: 15px 0 0 20px;
     font-weight: 300;
     color: #5e5e5e;
 }
@@ -353,9 +359,10 @@ footer .footer_discl {
 }
 
 .match_filters {
+     margin-top: 7.5rem;
      display: flex;
-     border-bottom: 1px solid #01285e;
-     background: #dff1ff;
+     border-bottom: 1px solid #dddddd;
+     background: #6b6b6b;
 }
 .match_filters .tag {
     font-weight: 300;
@@ -372,18 +379,19 @@ footer .footer_discl {
 }
 
 .match_filters .option.active {
-    background: #62a2d3;
+    background: #d36262;
     color: #fff;
 }
 
 .match_filters_box {
     padding: 10px 20px;
-    border-right: 1px solid #01285e;
-    background: #dff1ff;
+    border-right: 1px solid #dddddd;
+    background: #6b6b6b;
 }
 
 .match_filters .cont {
     display: flex;
+  
 }
 
 
@@ -461,9 +469,9 @@ footer .footer_discl {
 }
 
 .home_card_button {
-    width: 100%;
+    width: 80%;
     text-align: end;
-    margin-top: 1.5rem;
+    position: absolute;
     
 }
 
@@ -549,14 +557,15 @@ footer .footer_discl {
 }
 
 .league_table_wrapper {
-    border-left: 1px solid #98c6e9;
+    margin-top: 7.45rem;
+    border-left: 1px solid #dddddd;
 }
 .league_table_wrapper .title {
     padding: 22px;
     font-size: 22px;
     color: #ffffff;
-    background: #98c6e9;
-    border-bottom: 1px solid #01285e;
+    background: #6b6b6b;
+    border-bottom: 1px solid #dddddd;
 }
 
 .the_matches_wrapper .progress {
@@ -574,16 +583,18 @@ footer .footer_discl {
 .admin_container {
     margin-top: 96px;
     display:flex;
+    margin-top: 13rem;
 }
 
 .admin_container .admin_left_nav {
     min-height: 100vh;
     background: #282828;
-    border-right: 2px solid #01285e;
+    border-right: 2px solid #dddddd;
 }
 
 .admin_container  .admin_right {
     flex-grow: 1;
+  
 }
 .admin_container  .admin_progress {
     text-align: center;
@@ -633,7 +644,7 @@ footer .footer_discl {
 .admin_submit button {
     font-size: 20px;
     margin: 40px 0px;
-    background: #009688;
+    background: rgb(138, 0, 0);
 }
 
 /*=============================
@@ -645,13 +656,14 @@ footer .footer_discl {
     padding: 20px;
     background-size: 5px 5px !important;
     min-height:100vh;
+
 }
 
 .team_category_wrapper .title {
     font-size: 90px;
-    margin: 30px 0px;
+    margin: 150px 0 0 0px;
     font-family: 'Righteous', cursive;
-    color: #d5ebfe;
+    color: #000000;
 }
 
 .team_category_wrapper .team_cards {
