sports_project : navigation in header updated

--- a/src/Components/Header_Footer/header.scss
+++ b/src/Components/Header_Footer/header.scss
@@ -18,5 +18,5 @@
 }
 
 
-.ToolbarLogoStylingOn  { display: flex; justify-content: center;  align-items : center; }
+.Toolbar  { display: flex; justify-content: center;  align-items : center; }
 .ToolbarLogoStylingOff { display: none !important; }
