--- a/src/Components/VideosComponent/video.scss
+++ b/src/Components/VideosComponent/video.scss
@@ -1,22 +1,76 @@
 .youtube_background_container {
-    .backgroundColorContainer { background-color: black; width: 100vw; height: 100vh;}
+
     background : url('../../Resources/images/wade.jpg') center right no-repeat;
     background-size: cover;
     background-position: top;
     width: 100%;
-    height: 100%;
-    margin-top: 10rem;
+    height: auto;
+
+
+    .video_wrapperOne {
+        width: 66.5%;
+        display : flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .video_outer_wrapper {
+        color : white;
+    }
+
+    .video_inner_wrapper {
+        color: white;
+        border: 1px solid white;
+    }
+
+}
+
+.video_wrapperTwo {
+    display : flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: black;
+    padding-top: 5rem;
+    .video_outer_wrapper {
+        color : white;
+    }
+
+    .video_inner_wrapper {
+        color: white;
+        border: 1px solid white;
+    }
 }
 
 .text_container {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow:   0px -6px 0 #790125c7,  
+                 0px -6px 0 #790125c7,
+                 0px  6px 0 #790125c7,
+                 0px  6px 0 #790125c7,
+                -6px  0px 0 #790125c7,  
+                 6px  0px 0 #790125c7,
+                -6px  0px 0 #790125c7,
+                 6px  0px 0 #790125c7,
+                -6px -6px 0 #790125c7,  
+                 6px -6px 0 #790125c7,
+                -6px  6px 0 #790125c7,
+                 6px  6px 0 #790125c7,
+                 6px  6px 0 #790125c7,
+                -6px  6px 0 #790125c7,
+                -3px  3px 0 #790125c7,        
 }
+
+
 
 .miami_text{
  
     background: url(../../Resources/images/miami.png) center center no-repeat;
     background-position: 100% 50%;
+    padding-top: 5rem;
     width: 50vw;
     height: 20vh;
 }
