--- a/src/Components/Header_Footer/header.scss
+++ b/src/Components/Header_Footer/header.scss
@@ -20,3 +20,23 @@
 
 .Toolbar  { display: flex; justify-content: center;  align-items : center; }
 .ToolbarLogoStylingOff { display: none !important; }
+
+
+/*=============================
+            HEADER FOOTER
+===============================*/
+
+footer {
+    text-align: center;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 30px 0px;
+}
+
+footer .img_cover{
+   margin:0 auto;
+}
+
+footer .footer_discl {
+    margin: 10px 0px;
+}
