--- a/src/Resources/css/app.scss
+++ b/src/Resources/css/app.scss
@@ -3,717 +3,55 @@
 @import '../../Components/Home/teamNewsHome/teamNews.scss';
 @import '../../Components/Home/teamNewsHome/teamNewsMain/RouteNews.scss';
 @import '../../Components/VideosComponent/video.scss';
+@import '../../Components/fans/fansStyling.scss';
+@import '../../Components/Home/featured/featured.scss';
+@import '../../Components/Home/matches/matches.scss';
+@import '../../Components/ReusableUI/reusableStyling.scss';
+@import '../../Components/Home/promoEmail/promotion.scss';
+@import '../../Components/theMatches/theMatches.scss';
+@import '../../Components/admin/admin.scss';
+@import '../../Components/thePlayers/thePlayers.scss';
+@import '../../Components/signIn/signin.scss';
 
 
-body {
-    margin:0;
-    padding:0;
-    font-family: 'Righteous', cursive;
 
+body                            { margin:0;  padding:0;  font-family: 'Righteous', cursive; }
+a                               { text-decoration: none; color: inherit; }
+input                           { background: #fafafa; border: 1px solid #e9e9e9; font-size: 17px; padding: 8px; border-radius: 3px; font-family: Roboto; font-weight: 300; width: 100%; box-sizing: border-box; }
+select                          { font-size: 16px; height: 38px; border: 1px solid #e9e9e9;  border-radius: 3px; width: 100%; }
+button                          { background: #4e4e4e; color: #ffffff; border: 1px solid #ce0000; padding: 5px 10px; margin-top: 10px;font-size: 15px; border-radius: 3px; }
 
+.footer_bck                     { background-color: black; display: flex;  justify-content: space-evenly; }
+.img_cover                      { background-size: cover !important; }
+.container                      { width:1024px;  margin: 0 auto; }
 
-}
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
+.error_label                    { color: #F44336; font-weight: 600; margin: 10px 0px; }
+.success_label                  { color: #8a0000;font-weight: 600; margin: 10px 0px; }
+.label_inputs                   { font-size: 20px; margin: 10px 0px; font-weight: 300; background: #8a0000; color : #ffffff; padding: 10px; display: inline-block;}
+.split_fields                   { margin: 30px 0px; padding: 20px 0px; border-top: 2px solid #dddddd; }
+.plit_fields.last               { margin-bottom: 0; padding-bottom: 0; }
 
+::-webkit-input-placeholder     { /* Chrome/Opera/Safari */ color: #cecece; text-align: center; }
+::-moz-placeholder              { /* Firefox 19+ */ color: #cecece; text-align: center; }
+:-ms-input-placeholder          { /* IE 10+ */  color: #cecece; text-align: center; }  
+:-moz-placeholder               { /* Firefox 18- */  color: #cecece; text-align: center; }
 
+.image_upload_container         { position: relative;}
+.image_upload_container .remove { top: 0; position: absolute; right: 0;background: rgb(138, 0, 0); color: #ffffff; border: 1px solid white; padding: 10px;}
+.not_found_container            { text-align: center; margin-top: 96px; padding: 20px; background-size: 5px 5px !important; min-height: 100vh;text-align: center; font-size: 90px; font-family: 'Righteous', cursive;color: #d5ebfe; }
 
 
 
-.footer_bck {
-  background-color: black;
-   display: flex;
-   justify-content: space-evenly;
-}
 
 
 
-.img_cover {
-    background-size: cover !important;
-}
-.container {
-    width:1024px;
-    margin: 0 auto;
-}
 
-input {
-    background: #fafafa;
-    border: 1px solid #e9e9e9;
-    font-size: 17px;
-    padding: 8px;
-    border-radius: 3px;
-    font-family: Roboto;
-    font-weight: 300;
-    width: 100%;
-    box-sizing: border-box;
-}
 
-select {
-    font-size: 16px;
-    height: 38px;
-    border: 1px solid #e9e9e9;
-    border-radius: 3px;
-    width: 100%;
-}
 
 
-button {
-    background: #4e4e4e;
-    color: #ffffff;
-    border: 1px solid #ce0000;
-    padding: 5px 10px;
-    margin-top: 10px;
-    font-size: 15px;
-    border-radius: 3px;
-}
 
-.error_label {
-    color: #F44336;
-    font-weight: 600;
-    margin: 10px 0px;
-}
 
-.success_label {
-    color: #8a0000;
-    font-weight: 600;
-    margin: 10px 0px;
-}
 
-.label_inputs {
-    font-size: 20px;
-    margin: 10px 0px;
-    font-weight: 300;
-    background: #8a0000;
-    color : #ffffff;
-    padding: 10px;
-    display: inline-block;
-}
 
-.split_fields {
-    margin: 30px 0px;
-    padding: 20px 0px;
-    border-top: 2px solid #dddddd;
-}
 
-.split_fields.last {
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: #cecece;
-    text-align: center;
-  }
-  ::-moz-placeholder { /* Firefox 19+ */
-    color: #cecece;
-    text-align: center;
-  }
-  :-ms-input-placeholder { /* IE 10+ */
-    color: #cecece;
-    text-align: center;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    color: #cecece;
-    text-align: center;
-  }
-
-
-.image_upload_container {
-    position: relative;
-}
-
-.image_upload_container .remove {
-    top: 0;
-    position: absolute;
-    right: 0;
-    background: rgb(138, 0, 0);
-    color: #ffffff;
-    border: 1px solid white;
-    padding: 10px;
-}
-
-.not_found_container {
-    text-align: center;
-    margin-top: 96px;
-    padding: 20px;
-    background-size: 5px 5px !important;
-    min-height: 100vh;
-    text-align: center;
-    font-size: 90px;
-    font-family: 'Righteous', cursive;
-    color: #d5ebfe;
-}
-
-
-/*=============================
-            HEADER FOOTER
-===============================*/
-
-footer {
-    text-align: center;
-    font-size: 16px;
-    color: #ffffff;
-    padding: 30px 0px;
-}
-
-footer .img_cover{
-   margin:0 auto;
-}
-
-footer .footer_discl {
-    margin: 10px 0px;
-}
-
-
-/*=============================
-            FEATURED
-===============================*/
-
-.featured_wrapper {
-    background: url('../images/players/heat/heatBackground2.jpg');
-    background-size: cover;
-    background-position: right;
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
- 
-
-}
-
-.featured_heat_background {
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    background: linear-gradient(to left top, #000000f1, #000000, #000000, #25252500, #25252500, #222222, #38383800, #78777800, #6b6b6b7a, #1b1b1b3a, #2a2526, #140a0a);
-
-
-}
-
-.featured_stripes {
-    position: relative;
-    width: 100%;
-    display:flex;
-}
-.featured_text {
-    position: relative;
-    font-family: 'Righteous', cursive;
-    width: 100%;
-
-}
-
-
-.featured_stripes .stripe {
-    width: 40vw;
-    height: 100vh;
-    position: absolute;
-}
-
-.featured_text{
-    width: 50%;
-    font-size: 150px;
-    color: #d13c3cc2;
-    transform: translate(60px,50px);
-    position: absolute;
-}
-
-.featured_trophy {
-    width: 500px;
-    height: 600px;
-    background-size: contain !important;
-    background-repeat: no-repeat !important;
-    position: absolute;
-}
-
-
-
-/*=============================
-            MATCHES HOME
-===============================*/
-
-.home_matches_wrapper {
-    font-family: 'Righteous', cursive;
-
-    padding: 50px 0px;
-}
-
-.home_matches_wrapper .home_matches {
-    flex-wrap: wrap;
-    display: flex;
-    margin-top: 60px;
-}
-
-.home_matches_wrapper .home_matches .item {
-    width: 50%;
-    margin: 35px 0px;
-}
-
-.home_matches_wrapper .home_matches .item .wrapper {
-    padding-right:30px;
-}
-
-
-/*=============================
-            MATCHES BLOCK
-===============================*/
-
-.match_block .match_date{
-    color:#ffffff;
-    font-size:18px;
-}
-
-.match_block .match_wrapper .match_top,
-.match_block .match_wrapper .match_bottom {
-    display: flex;
-}
-.match_block .match_wrapper .match_bottom {
-    margin-top: 5px;
-}
-
-.match_block .match_wrapper .match_top .left,
-.match_block .match_wrapper .match_bottom .left {
-    background: #ffffff; 
-    font-family: 'Righteous', cursive;
-    flex-grow: 1;
-    margin-right: 5px;
-    padding: 10px;
-}
-
-.match_block .match_wrapper .match_top .left div,
-.match_block .match_wrapper .match_bottom .left div {
-    float:left
-}
-
-.match_block .match_wrapper .match_top .left .icon,
-.match_block .match_wrapper .match_bottom .left .icon {
-    width: 50px;
-    height: 50px;
-    background-size: cover !important;
-}
-.match_block .match_wrapper .match_top .left .team_name,
-.match_block .match_wrapper .match_bottom .left .team_name {
-    font-size: 30px;
-    padding: 6px 10px;
-}
-
-
-.match_block .match_wrapper .match_top .right,
-.match_block .match_wrapper .match_bottom .right { 
-    background: rgb(138, 0, 0);
-    width: 70px;
-    color: #ffffff;
-    font-size: 50px;
-    text-align: center;
-    padding-top: 6px;
-} 
-
-.match_box_big {
-    width:100%;
-    border-bottom: 2px solid #dddddd;
-    padding: 20px;
-    box-sizing: border-box;
-    height: 153px;
-    clear: both;
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.match_box_big .block_wraper {
-    display: inline-block;
-    margin-right: 100px;
-   
-}
-
-.match_box_big .block {
-    display: flex;
-}
-
-.match_box_big .icon{
-    width: 80px;
-    height: 56px;
-    background-size: cover !important;
-    background-position: center;
-}
-
-.match_box_big .block .team,
-.match_box_big .block .result {
-    font-size: 21px;
-    line-height: 51px;
-    margin-left: 20px;
-    font-weight: 300;
-}
-
-.match_box_big .block .result {
-    font-weight: 500;
-}
-
-.block_wraper.nfo {
-    border-left: 1px solid #dddddd;
-  
-    height: 102px;
-    padding: 15px 0 0 20px;
-    font-weight: 300;
-    color: #5e5e5e;
-}
-
-.block_wraper.nfo div {
-    margin: 5px 0px;
-}
-
-.match_filters {
-     margin-top: 7.5rem;
-     display: flex;
-     border-bottom: 1px solid #dddddd;
-     background: #6b6b6b;
-}
-.match_filters .tag {
-    font-weight: 300;
-    margin-bottom: 5px;
-    color: #656565;
-}
-.match_filters .option {
-    background: #ffffff;
-    padding: 5px 9px;
-    border-radius: 3px;
-    font-size: 13px;
-    margin-right: 5px;
-    cursor: pointer;
-}
-
-.match_filters .option.active {
-    background: #d36262;
-    color: #fff;
-}
-
-.match_filters_box {
-    padding: 10px 20px;
-    border-right: 1px solid #dddddd;
-    background: #6b6b6b;
-}
-
-.match_filters .cont {
-    display: flex;
-  
-}
-
-
-/*=============================
-            MATCHES BLOCK
-===============================*/
-
-
-
-
-
-.player_card_wrapper {
-    position: relative;
-    width: 100%;
-    display: flex;
-    font-family: 'Righteous', cursive;
-    margin-top: 3rem;
-
-}
-.player_card_wrapper .player_card_thmb {
-    position: relative;
-    width:80%;
-    height:90vh;
-    background-repeat: no-repeat !important;
-    background-position: center !important;
-    background-size: contain !important;
-}
-
-.player_card_wrapper .player_card_nfo {
-    text-align: end;
-    width: 100%;
-    padding-left: 10%;
-  
-    
-}
-.player_card_wrapper .player_card_number {
-    position: absolute;
-    z-index: -1;
-    top: 100px;
-    left: 120px;
-    color: rgb(138, 0, 0);
-    font-size: 400px;
-    text-align: right;
-    line-height: 160px;
-}
-
-.playerd_card_abilities {
-    font-size: 20px;
-    text-align: end;
-
-    span {
-        padding-left: 3rem;
-    }
-   
-}
-.player_card_statistics {
-    padding-top: 3rem;
-    font-size: 3rem;
-
-    span {
-        padding-left: 3rem;
-    }
-}
-.player_card_about {
-    float: right;
-    width: 40%;
-}
-
-
-.player_card_wrapper .player_card_name  { 
-    display: block;
-    font-size: 100px;
-    text-transform: uppercase;
-    color: #050505;
-}
-
-.home_card_button {
-    width: 80%;
-    text-align: end;
-    position: absolute;
-    
-}
-
-
-/*=============================
-         PROMOTION
-===============================*/
-
-.promotion_wrapper {
-    padding: 30px 0px 130px 0px;
-}
-
-.promotion_wrapper .promotion_animation {
-    display: flex;
-    padding: 80px 0px 30px 0px;
-}
-
-.promotion_wrapper .promotion_animation .left { 
-    text-transform: uppercase;
-    text-transform: uppercase;
-    font-size: 150px;
-    font-family: 'Righteous', cursive;
-    flex-grow: 1;
-    color:#4e4e4e;
-    line-height: 135px;
-}
-.promotion_wrapper .promotion_animation .left span {
-    display:block;
- }
-
-.promotion_wrapper .promotion_animation .right {
-    line-height: 135px;
-}
-
-.promotion_wrapper .promotion_animation .right div{
-    width: 280px;
-    height: 280px;
-    background-size: contain !important;
-}
-
-.promotion_wrapper .enroll_wrapper {
-    text-align: center;
-}
-
-.promotion_wrapper .enroll_title {
-    font-family: 'Righteous', cursive;
-    font-size: 26px;
-    color: #4e4e4e;
-}
-
-.promotion_wrapper .enroll_discl {
-    font-weight: 300;
-    font-size: 12px;
-    width: 271px;
-    margin: 0 auto;
-    padding: 10px 0px;
-}
-
-.promotion_wrapper .enroll_input {
-    width: 330px;
-    margin: 0 auto;
-    padding: 10px 0px;
-}
-
-/*=============================
-         THE MATCHES
-===============================*/
-
-.the_matches_container {
-    margin-top: 96px;
-}
-
-.the_matches_wrapper {
-    display: flex;
-}
-
-.the_matches_wrapper .left {
-    flex-grow: 1;
-}
-
-.the_matches_wrapper .right {
-   width:400px;
-}
-
-.league_table_wrapper {
-    margin-top: 7.45rem;
-    border-left: 1px solid #dddddd;
-}
-.league_table_wrapper .title {
-    padding: 22px;
-    font-size: 22px;
-    color: #ffffff;
-    background: #6b6b6b;
-    border-bottom: 1px solid #dddddd;
-}
-
-.the_matches_wrapper .progress {
-    text-align: center;
-    padding: 60px 0px;
-}
-
-
-
-
-/*=============================
-         ADMIN
-===============================*/
-
-.admin_container {
-    margin-top: 96px;
-    display:flex;
-    margin-top: 13rem;
-}
-
-.admin_container .admin_left_nav {
-    min-height: 100vh;
-    background: black;
-    border-right: 2px solid #dddddd;
-    
-}
-
-.admin_container  .admin_right {
-    flex-grow: 1;
-  
-}
-.admin_container  .admin_progress {
-    text-align: center;
-    margin: 20px 0px;
-}
-
-.admin_container .matches_tag_red {
-    font-weight: 700;
-    color: #F44336;
-}
-
-.admin_container .matches_tag_green {
-    font-weight: 700;
-    color: #4CAF50;
-}
-
-.admin_container h2 {
-    margin: 50px 0px 50px 0px;
-    border-bottom: 1px solid #dbdbdb;
-    color: #414141;
-    font-size: 40px;
-}
-
-.editmatch_dialog_wrapper,
-.editplayers_dialog_wrapper {
-    padding: 20px;
-
-    width: 480px;
-}
-
- 
-.select_team_layout .wrapper{
-    display: flex;
-}
-
-.select_team_layout .wrapper .left {
-    flex-grow: 1;
-}
-
-.select_team_layout input[name=result_local_input],
-.select_team_layout input[name=result_away_input] {
-    width: 60px;
-    text-align: center;
-    background: #8a0000;
-    color: #ffffff;
-}
-
-.admin_submit button {
-    font-size: 20px;
-    margin: 40px 0px;
-    background: rgb(138, 0, 0);
-}
-
-/*=============================
-         THE TEAM
-===============================*/
-
-.the_team_container {
-    margin-top: 96px;
-    padding: 20px;
-    background-size: 5px 5px !important;
-    min-height:100vh;
-
-}
-
-.team_category_wrapper .title {
-    font-size: 90px;
-    margin: 150px 0 0 0px;
-    font-family: 'Righteous', cursive;
-    color: #000000;
-}
-
-.team_category_wrapper .team_cards {
-    display: flex;
-    flex-wrap: wrap;
-}
-.team_category_wrapper .team_cards .item{
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-/*=============================
-            SIGN IN
-===============================*/
-
-.signin_wrapper {
-    margin-top: 96px;
-    padding: 20px;
-    min-height: 70VH;
-    text-align: center;
-}
-
-.signin_wrapper form {
-    width: 350px;
-    margin: 0 auto;
-}
-
-.signin_wrapper form button {
-    width: 100%;
-    padding: 10px;
-}
-
-.signin_wrapper h2 {
-    font-family: 'Righteous', cursive;
-    color: #98c6e9;
-    font-size: 50px;
-}
-
-.user_dashboard {
-    font-size: 60px;
-    font-family: 'Righteous', cursive;
-    color: #d5ebfe;
-    text-align: center;
-    margin-top: 200px;
-}
