--- a/src/Components/Home/countdown/countdown.scss
+++ b/src/Components/Home/countdown/countdown.scss
@@ -2,142 +2,120 @@
 /*====================
         COUNTDOWN
 ======================*/
-.videoWrapper {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
 
-
-.countdown_wrapper {
-    position: relative;
-    bottom: 0px;
-    color:#ffffff;
-    font-family: 'Righteous', cursive;
-    height: 100%;
-}
-
-.videoFadingContainer {
-    position: absolute;
-    top: 0px;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.37);
+@media screen and (min-width: 375px) {
+    .videoWrapper         { object-fit: cover; width: 100%; height: 100%; }
+    .countdown_wrapper    { position: relative; bottom: 0px; color:#ffffff; font-family: 'Righteous', cursive; height: 100%; }
+    .videoFadingContainer { position: absolute; top: 0px; height: 17.9%; width: 100%; background-color: rgba(0, 0, 0, 0.37); }
     
-}
-
-.countdown_wrapper .countdown_top {
-    position: absolute;
-    top: 10px;
-    margin : 0;
-    font-size: 3vw;
-    padding: 40px;
-    text-transform: uppercase;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    font-weight: 400;
-
-    h3 { padding-left: 2rem; margin: 0; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;  }
-    h2 {
-        margin : 0;
-        padding-left : 2rem;
+    .countdown_wrapper .countdown_top { position: absolute; top: 10px; margin : 0; font-size: 3vw; padding: 10px; text-transform: uppercase; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; font-weight: 400; h3 { padding-left: 2rem; margin: 0; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;  }
+        h2 { margin : 0; padding-left : 2rem;}
     }
+    
+    .countdown_wrapper .countdown_top .countdown_toptext { font-size: 3vw; text-transform: uppercase; font-family: 'Righteous', cursive;  } 
+    .countdown_wrapper .countdown_top .countdown_toptext .countdown_innertext { display : flex; font-size: 3vw; margin : 0; text-transform: uppercase; font-family: 'Righteous', cursive;  h2 { margin : 0; padding-left : 2rem; color: rgb(255, 255, 255); }
+    
+    }
+    .CountdownCard_wrapper { top: 48.5%; left: 0%; width: 100%; }
+    
+    
+    .countdown_wrapper .countdown_bottom { width: 100%; padding-left: 5rem; display: flex; font-weight : 400;        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+    
+    .countdown_wrapper .countdown_time { color:#ffffff; font-size: 7vw; padding: 1.5rem 1rem; display: flex; }
+    .countdown_wrapper .countdown_item:last-child .countdown_time{ border:none; }
+    
+    .countdown_wrapper .countdown_tag { text-transform: uppercase; font-size: 10px; text-align: center; }
+    
+    
+    .card_inside_controller { display: flex; justify-content: space-around; align-items: center; background-color: #fffdfd; height: 180px; }
+    
+    .card_date_wrapper { background-color:  #8a0000; display: flex; justify-content: space-around; align-items: center; }
+    
+    .newsCards_inside_wrapper { display: flex; flex-direction: column; justify-content: space-around; }
+    .cardStyles { width: 100%; height: 100%; text-align: center; }
 
-}
+    .upcoming { color: black; text-align: center; padding: 2rem 0; }
+    
+    .scheduleButoon {text-align: center; height: 100px; margin-top: 3rem;
+         a { padding : 1rem; background-color: #8a0000; }
+    }
+    
+  }
+  
+  
 
-.countdown_wrapper .countdown_top .countdown_toptext {
+  @media screen and (min-width: 414px) { 
+    .videoFadingContainer { position: absolute; top: 0px; height: 19.4%; width: 100%; background-color: rgba(0, 0, 0, 0.37); }
+    .countdown_wrapper .countdown_bottom {width: 100%; padding : 1rem 3rem; display: flex; justify-content: center; font-weight : 400; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+
+    .countdown_wrapper .countdown_time { color:#ffffff; font-size: 8vw; padding: 1rem ; display: flex; }
+  }
+
+
+
+  @media screen and (min-width: 768px) { 
+
+    .videoFadingContainer                    { position: absolute; top: 0px; height: 30.8%; }
+    .countdown_wrapper .countdown_bottom     { width: 500px; padding : 2rem 6rem; display: flex; justify-content: center; font-weight : 400; }
+    .countdown_wrapper .countdown_tag        { text-transform: uppercase; font-size: 20px; text-align: center;}
+    .card_inside_controller                  { display: flex; justify-content: space-evenly; }
+    .newsCards_inside_wrapper                { display: flex; flex-direction: column; align-items: center; justify-content: space-around;    }
+    .cardStyles                              { width: 345px; height: 100%; text-align: center; }
+
+    @media screen and (min-height: 1024px) {
+        .countdown_wrapper .countdown_bottom { width: 80%; }
+        .countdown_wrapper .countdown_tag    { font-size: 25px; text-align: center;}
+        .countdown_wrapper .countdown_time   { font-size: 11vw; padding: 1.5rem 2.4rem;}
+    }
    
-    font-size: 3vw;
-    text-transform: uppercase;
-    font-family: 'Righteous', cursive;
+  }
 
-}
+  @media screen and (min-width: 1024px) { 
 
-.countdown_wrapper .countdown_top .countdown_toptext .countdown_innertext {
-    display : flex;
-    font-size: 3vw;
-    margin : 0;
-    text-transform: uppercase;
-    font-family: 'Righteous', cursive;
+    .videoFadingContainer                { height: 53%; }
+    .countdown_wrapper .countdown_bottom { width: 800px; padding : 5rem 6rem; display:  flex; justify-content: center; font-weight : 400; }
+    .countdown_wrapper .countdown_tag    { text-transform: uppercase; font-size: 30px; text-align: center;}
+    .card_inside_controller              { display: flex; justify-content: space-evenly; }
+    .countdown_wrapper .countdown_time   { font-size: 11vw; padding: 1.5rem 3rem; display: flex; }
 
-    h2 {
-        margin : 0;
-        padding-left : 2rem;
-        color: rgb(255, 255, 255);
+    .newsCards_inside_wrapper            { display: flex; flex-direction: row;  align-items: center; justify-content: space-evenly;    }
+    .cardStyles                          { width: 305px; height: 100%; text-align: center; }
+   
+  }
 
-    }
+  @media screen and (min-width: 1280px) { 
+   
+    .videoWrapper                        { object-fit: cover; width: 100%; height: 100vh !important; }
+    .videoFadingContainer                { height: 58.4%; }
+    .countdown_wrapper .countdown_bottom { width: 100%; padding : 5rem 6rem; display:  flex; justify-content: flex-end; font-weight : 400; }
+    .newsCards_inside_wrapper            { display: flex; flex-direction: row;  align-items: center; justify-content: space-evenly;    }
+    .cardStyles                          { width: 305px; height: 100%; text-align: center; border: 1px solid rgba(221, 221, 221, 0.705); }
+   
+  }
 
-}
-.CountdownCard_wrapper {
-    position: absolute;
-    top: 48.5%;
-    left: 0%;
-    width: 100%;
-}
+  @media screen and (min-width: 1366px) { 
+   
+    .videoFadingContainer { height: 57%; }
+    .scheduleButoon       { margin-top: 7rem;}
 
+   
+  }
 
-.countdown_wrapper .countdown_bottom {
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    display: flex;
-    justify-content: center;
-    padding: 10px 15px;
-    text-align : center;
-    font-weight : 400;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
-}
-
-.countdown_wrapper .countdown_time {
-    color:#ffffff;
-    font-size: 10vw;
-    margin-right: 14px;
-    padding-right: 50px;
+  @media screen and (min-width: 1440px) { 
+   
+    .videoFadingContainer { height: 58.3%; }
     
-    
-}
-.countdown_wrapper .countdown_item:last-child .countdown_time{
-    border:none;
-}
 
-.countdown_wrapper .countdown_tag {
-    text-transform: uppercase;
-    font-size: 30px;
-    padding-right: 5rem;
-    
-    
-}
+   
+  }
 
 
-.card_inside_controller {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #fffdfd;
-    height: 180px;
-    margin-bottom: 5rem;
-}
+  @media screen and (min-width: 1680px) { 
+   
+    .videoFadingContainer { height: 65.1%; }
+    .countdown_wrapper .countdown_bottom { width: 100%; padding : 5rem 9rem; font-weight : 400; }
+    .countdown_wrapper .countdown_time   { color:#ffffff; font-size: 13vw; padding: 2rem 3rem; display: flex; }
+    .cardStyles                          { width: 430px !important; height: 100%;}
 
-.card_date_wrapper {
-    background-color:  #8a0000;;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-}
-
-.newsCards_inside_wrapper {
-    display: flex;
-    justify-content: space-around;
-}
-
-.scheduleButoon {
-    text-align: center;
-    height: 100px;
-
-    a {
-        padding : 1rem;
-        background-color: #8a0000;
-
-    }
-}
+   
+  }
