--- a/src/Components/Home/featured/featured.scss
+++ b/src/Components/Home/featured/featured.scss
@@ -2,58 +2,25 @@
             FEATURED
 ===============================*/
 
-.featured_wrapper {
-    background: url('../../../Resources//images/players/heat/heatBackground2.jpg');
-    background-size: cover;
-    background-position: right;
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
- 
-
-}
-
-.featured_heat_background {
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    background: linear-gradient(to left top, #000000f1, #000000, #000000, #25252500, #25252500, #222222, #38383800, #78777800, #6b6b6b7a, #1b1b1b3a, #2a2526, #140a0a);
-
-
-}
-
-.featured_stripes {
-    position: relative;
-    width: 100%;
-    display:flex;
-}
-.featured_text {
-    position: relative;
-    font-family: 'Righteous', cursive;
-    width: 100%;
+@media screen and (min-width: 375px) { 
+    .featured_wrapper { background: url('../../../Resources//images/players/heat/heatBackground2.jpg'); background-size: cover; background-position: center; margin: 0 auto; width: 100%; height: 88vh; overflow: hidden;    }
+    .featured_heat_background {width: 100%;height: 100%;z-index: 999;background: linear-gradient(to left top, #000000f1, #000000, #000000, #25252500, #25252500, #222222, #38383800, #78777800, #6b6b6b7a, #1b1b1b3a, #2a2526, #140a0a);}
+    .featured_stripes {position: relative;width: 100%; height : 100% ;display:flex; justify-content: flex-end; align-items: flex-end; }
+    .featured_text {position: relative;font-family: 'Righteous', cursive;width: 100%;}
+    .featured_stripes .stripe {width: 40vw;height: 100vh;position: absolute; }
+    .featured_text{width: 50%;display: none;font-size: 50px;color: #d13c3cc2;transform: translate(60px,50px);position: absolute;}
+    .featured_trophy {width: 500px;height: 600px;background-size: contain !important;background-repeat: no-repeat !important;position: absolute;}
+    
 
 }
 
 
-.featured_stripes .stripe {
-    width: 40vw;
-    height: 100vh;
-    position: absolute;
-}
+@media screen and (min-width: 1280px) { 
+    .featured_wrapper_controller { position: relative; width: 60%; display : flex; justify-content: flex-end; align-items: flex-end;}
+    .bam_bck { background: url('../../../Resources/images/players/heat/bam.png') center center no-repeat; background-size: 100% 100%;  }
+    .dragon_bck{ background: url('../../../Resources/images/players/heat/dragon.png') center center no-repeat; background-size: cover;}
+    .trophy_bck { background: url('../../../Resources/images/logos/trophy.png') center center no-repeat ; background-size: 100% 100%;}
+    .butler_bck {background: url('../../../Resources/images/players/heat/jimmy3.png') center center no-repeat; background-size: cover; }
 
-.featured_text{
-    width: 50%;
-    font-size: 150px;
-    color: #d13c3cc2;
-    transform: translate(60px,50px);
-    position: absolute;
-}
-
-.featured_trophy {
-    width: 500px;
-    height: 600px;
-    background-size: contain !important;
-    background-repeat: no-repeat !important;
-    position: absolute;
+    #stare { width: 45vw; height: 45vh; }
 }
