--- a/src/Components/Home/matches/matches.scss
+++ b/src/Components/Home/matches/matches.scss
@@ -2,7 +2,16 @@
             MATCHES HOME
 ===============================*/
 
-.home_matches_wrapper { font-family: 'Righteous', cursive;  padding: 50px 0px; }
+.home_matches_wrapper { font-family: 'Righteous', cursive;  padding: 50px 0px; width: 100%; }
 .home_matches_wrapper .home_matches { flex-wrap: wrap; display: flex;  margin-top: 60px; }
 .home_matches_wrapper .home_matches .item { width: 50%; margin: 35px 0px; }
 .home_matches_wrapper .home_matches .item .wrapper { padding-right:30px; }
+
+
+
+@media screen and (min-width: 1280px) {
+
+    .container-fluid { width: 1024px !important; margin: 0 auto; }
+   
+
+  }
