--- a/src/Components/Home/teamNewsHome/teamNews.scss
+++ b/src/Components/Home/teamNewsHome/teamNews.scss
@@ -1,28 +1,52 @@
-.news_outer_wrapper {  background-color: white; padding-top: 3rem; h2 { padding-left: 9.2rem;}}
-.news_inner_wrapper {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-   
-    margin-bottom : 1rem;
-}
+@media screen and (min-width: 375px) { 
 
-.newsLeft{
-    width: 41.5vw;
-    height: 50vh;
-    background : url('../../../Resources/images/players/heat/newsImages/butler1.jpg');
-    background-size: cover;
-    background-position: center;
-    margin: 0.5rem;  
-       
+    .news_outer_wrapper {  background-color: white; padding-top: 3rem; h2 { padding-left: 9.2rem;}}
+    .news_inner_wrapper {  display: flex; width: 100%; justify-content: center; flex-direction: column; margin-bottom : 1rem; }
+    
+    .newsLeft{ width: 100%; height: 50vh;  margin: 0.5rem;  
+        background : url('../../../Resources/images/players/heat/newsImages/butler1.jpg') center center no-repeat; background-size: cover;} 
+
+    .newsRight{ width: 100%; height: 50vh; margin: 0.5rem;  
+        background : url('../../../Resources/images/players/heat/newsImages/derrick1.jpg') center center no-repeat; background-size: cover;
+    }
 
 }
 
-.newsRight{
-    width: 41.5vw;
-    height: 50vh;
-    background : url('../../../Resources/images/players/heat/newsImages/derrick1.jpg');
-    background-size: cover;
-    background-position: center;
-    margin: 0.5rem;  
+@media screen and (min-width: 768px) { 
+    .news_outer_wrapper h2 { padding-left: 3.2rem;}
+    .carousel_wrapper { width : 50%; margin : 0 auto; margin-bottom: 4rem;}
+}
+
+@media screen and (min-width: 1024px) { 
+    .news_outer_wrapper h2 { padding-left: 3.2rem;}
+    .carousel_wrapper { width : 87%; margin : 0 auto; margin-bottom: 4rem;}
+}
+
+
+@media screen and (min-width: 1280px) { 
+    .news_inner_wrapper {  display: flex; width: 100%; justify-content: center; flex-direction: row !important; margin-bottom : 1rem; }
+    
+    .newsLeft{ width: 46.2vw; height: 50vh;  margin: 0.5rem;  
+        background : url('../../../Resources/images/players/heat/newsImages/butler1.jpg') center center no-repeat; background-size: cover;} 
+
+    .newsRight{ width: 46.2vw; height: 50vh; margin: 0.5rem;  
+        background : url('../../../Resources/images/players/heat/newsImages/derrick1.jpg') center center no-repeat; background-size: cover;
+    }
+    .carousel_wrapper { width : 100% !important; margin : 0 auto; margin-bottom: 4rem;}
+}
+
+@media screen and (min-width: 1440px) { 
+    .news_inner_wrapper {  display: flex; width: 100%; justify-content: center; flex-direction: row !important; margin-bottom : 1rem; }
+    
+    .newsLeft{ width: 40.9vw; margin: 0.5rem; margin-left: 1rem; } 
+
+    .newsRight{ width: 40.9vw; height: 50vh; margin: 0.5rem; }
+    .carousel_wrapper { width : 88% !important; margin : 0 auto; margin-bottom: 4rem;}
+}
+
+@media screen and (min-width: 1680px) { 
+    
+    .newsLeft{ width: 41.5vw; margin: 0.5rem; margin-left: 0.5rem; } 
+    .newsRight{ width: 41.5vw; height: 50vh; margin: 0.5rem; }
+ 
 }
