--- a/src/Components/VideosComponent/video.scss
+++ b/src/Components/VideosComponent/video.scss
@@ -1,83 +1,147 @@
-.youtube_background_container {
+@media screen and (min-width: 375px) {  
+    .youtube_background_container {
 
-    background : url('../../Resources/images/wade.jpg') center right no-repeat;
-    background-size: cover;
-    background-position: top;
-    width: 100%;
-    height: auto;
-
-
-    .video_wrapperOne {
-        width: 66.5%;
+        background : url('../../Resources/images/wade.jpg') center right no-repeat;
+        background-size: cover;
+        background-position: top;
+        width: 100%;
+        height: auto;
+    
+    
+        .video_wrapperOne {
+            width: 100%;
+            display : flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+    
+        .video_outer_wrapper {
+            color : white;
+        }
+    
+        .video_inner_wrapper {
+            color: white;
+            border: 1px solid white;
+        }
+    
+    }
+    .videosTxt{
+        color: white; font-size: 13vw; text-align: center; width: 100%; padding-top : 5rem      
+    } 
+    .video_wrapperTwo {
         display : flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        background-color: black;
+        width: 100%;
+        padding-top: 5rem;
+        padding-bottom: 2rem;
+        .video_outer_wrapper {
+            color : white;
+        }
+        p { width: 100%;}
+        .video_inner_wrapper {
+            color: white;
+            border: 1px solid white;
+        }
     }
-
-    .video_outer_wrapper {
-        color : white;
+    
+    .text_container {
+        width: 100%;
+        height: 40vh;
+        color: #fff;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-shadow:   0px -6px 0 #790125c7,  
+                     0px -6px 0 #790125c7,
+                     0px  6px 0 #790125c7,
+                     0px  6px 0 #790125c7,
+                    -6px  0px 0 #790125c7,  
+                     6px  0px 0 #790125c7,
+                    -6px  0px 0 #790125c7,
+                     6px  0px 0 #790125c7,
+                    -6px -6px 0 #790125c7,  
+                     6px -6px 0 #790125c7,
+                    -6px  6px 0 #790125c7,
+                     6px  6px 0 #790125c7,
+                     6px  6px 0 #790125c7,
+                    -6px  6px 0 #790125c7,
+                    -3px  3px 0 #790125c7,        
     }
-
-    .video_inner_wrapper {
-        color: white;
-        border: 1px solid white;
+    
+    
+    
+    .miami_text{
+     
+        background: url(../../Resources/images/miami.png) center center no-repeat;
+        background-position: 100% 50%;
+        padding-top: 5rem;
+        width: 50vw;
+        height: 20vh;
+    }
+    
+    .heat_text{
+        background: url(../../Resources/images/heat.png) center center no-repeat;
+        background-position: 100% 50%;
+        width: 60vw;
+        height: 30vh;
     }
 
 }
 
-.video_wrapperTwo {
-    display : flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    background-color: black;
-    padding-top: 5rem;
-    .video_outer_wrapper {
-        color : white;
+@media screen and (min-width: 768px) { 
+
+    .video_wrapperOne {
+        width: 50% !important;
+       
+        justify-content: flex-start;
+     
     }
-
-    .video_inner_wrapper {
-        color: white;
-        border: 1px solid white;
+    .miami_text{
+     
+        background-position: 50% 50%;
+        padding-top: 5rem;
+        width: 100vw;
+        height: 30vh;
     }
-}
+    .heat_text{
+        background: url(../../Resources/images/heat.png) center center no-repeat;
+        background-position: 50% 50%;
+        width: 100vw;
+        height: 30vh;
+    }
+  
+ }
 
-.text_container {
-    width: 100%;
-    height: 80vh;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-shadow:   0px -6px 0 #790125c7,  
-                 0px -6px 0 #790125c7,
-                 0px  6px 0 #790125c7,
-                 0px  6px 0 #790125c7,
-                -6px  0px 0 #790125c7,  
-                 6px  0px 0 #790125c7,
-                -6px  0px 0 #790125c7,
-                 6px  0px 0 #790125c7,
-                -6px -6px 0 #790125c7,  
-                 6px -6px 0 #790125c7,
-                -6px  6px 0 #790125c7,
-                 6px  6px 0 #790125c7,
-                 6px  6px 0 #790125c7,
-                -6px  6px 0 #790125c7,
-                -3px  3px 0 #790125c7,        
-}
+ @media screen and (min-width: 1024px) { 
+    .video_wrapperOne {
+        width: 66% !important;
+        justify-content: flex-start;
+     
+    }
+    .videosTxt { width: 80%;}
+  }
 
+  @media screen and (min-width: 1280px) { 
+    
+    .videosTxt { width: 60%; height: 100%;}
+
+    .text_container { height: 80vh; }
 
 
-.miami_text{
- 
-    background: url(../../Resources/images/miami.png) center center no-repeat;
-    background-position: 100% 50%;
-    padding-top: 5rem;
-    width: 50vw;
-    height: 20vh;
-}
-
-.heat_text{
-    background: url(../../Resources/images/heat.png) center center no-repeat;
-    background-position: 100% 50%;
-    width: 60vw;
-    height: 30vh;
-}
+    .miami_text{
+     
+        background: url(../../Resources/images/miami.png) center center no-repeat;
+        background-position: 100% 50%;
+        padding-top: 5rem;
+        width: 50vw;
+        height: 20vh;
+    }
+    
+    .heat_text{
+        background: url(../../Resources/images/heat.png) center center no-repeat;
+        background-position: 100% 50%;
+        width: 60vw;
+        height: 30vh;
+    }
+    }
