--- a/src/Components/fans/fansStyling.scss
+++ b/src/Components/fans/fansStyling.scss
@@ -1,19 +1,37 @@
-.fansBck {
-    width: 100%;
-    height: 100vh;
-    background : url('../../Resources/images/fans.jpg') bottom center no-repeat;
-    background-size: cover;
+@media screen and (min-width: 375px) {  
+    .fansBck {
+        width: 100%;
+        height: 100vh;
+        background : url('../../Resources/images/fans.jpg') bottom center no-repeat;
+        background-size: cover;
+    
+        .fansTxt {
+           
+            height: 100%;
+            display : flex;
+            color: #f7f5f5;
+            font-size: 2.5vw;
+            padding:15rem 0 0 1rem;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 
+}
+
+@media screen and (min-width: 1280px) { 
     .fansTxt {
-       
+           
         height: 100%;
         display : flex;
         color: #f7f5f5;
         font-size: 2.5vw;
-        padding:10rem 0 0 11rem;
+        padding:10rem 0 0 11rem !important;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-}
+ }
+
 
