--- a/src/Resources/css/app.scss
+++ b/src/Resources/css/app.scss
@@ -12,16 +12,16 @@
 @import '../../Components/admin/admin.scss';
 @import '../../Components/thePlayers/thePlayers.scss';
 @import '../../Components/signIn/signin.scss';
+@import '../../Components/Home/meetPlayers/meetPlayers.scss';
 
 
 
-body                            { margin:0;  padding:0;  font-family: 'Righteous', cursive; }
+body                            {  margin:0;  padding:0;  font-family: 'Righteous', cursive; }
 a                               { text-decoration: none; color: inherit; }
 input                           { background: #fafafa; border: 1px solid #e9e9e9; font-size: 17px; padding: 8px; border-radius: 3px; font-family: Roboto; font-weight: 300; width: 100%; box-sizing: border-box; }
 select                          { font-size: 16px; height: 38px; border: 1px solid #e9e9e9;  border-radius: 3px; width: 100%; }
 button                          { background: #4e4e4e; color: #ffffff; border: 1px solid #ce0000; padding: 5px 10px; margin-top: 10px;font-size: 15px; border-radius: 3px; }
 
-.footer_bck                     { background-color: black; display: flex;  justify-content: space-evenly; }
 .img_cover                      { background-size: cover !important; }
 .container                      { width:1024px;  margin: 0 auto; }
 
